--- a/lab4/styles/style.css
+++ b/lab4/styles/style.css
@@ -6,16 +6,25 @@ li{
 	float: left;
 }
 div{
-	width: 300px;
+	width: 250px;
 	float: left;
-}
-
-.online{
-	position: relative;
-	top: 200px;
-	left: 550px;
+	display:inline-block;
 }
 body{
 	background-color: black;
 }
-h
+li a{
+	display: block;
+	color: #000;
+	padding: 8px 0 8px 16px;
+	text-align: left;
+}
+fieldset
+{
+	width: 300px;
+	float: left;
+}
+img{
+	width: 250px; height: 250px;
+	}
+	
