--- a/lab4/styles/style.css
+++ b/lab4/styles/style.css
@@ -1,28 +1,26 @@
 footer{
-	float: left
-}
-li{
+	float: left;
+	display: inline;
+	margin-right: 500px;
+	}
+fieldset{
 	width: 300px;
 	float: left;
-}
-div{
-	width: 250px;
-	float: left;
-	display:inline-block;
-}
-}
-li a{
-	display: block;
-	color: #000;
-	padding: 8px 0 8px 16px;
-	text-align: left;
-}
-fieldset
-{
-	width: 300px;
-	float: left;
-}
+	}
 img{
 	width: 250px; height: 250px;
 	}
-	
+ul li{
+	float: left;
+	display: inline;
+	margin-right: 200px;
+}
+.online{
+	float: center;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+body{
+	background-color: green;
+}
