--- a/lab4/styles/style.css
+++ b/lab4/styles/style.css
@@ -11,6 +11,7 @@ fieldset{
 	}
 img{
 	width: 250px; height: 250px;
+		border-radius: 15px;
 	}
 ul li{
 	float: left;
@@ -41,13 +42,22 @@ h1{
 }
 aside img{
 	width: 100px; height: 80px;
+		border-radius: 15px;
 }
 figure{
 	float: left;
 	display: inline;
 	width: 350px;
 }
-header fieldset legend form{
-	float; right:
-	width; 100px:
+a{
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: none;
+}
+.tack{
+	float: center;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
